# polymarket_logger

./: .gitignore  Cargo.toml  README.md  example_metadata.json
backtest/: Cargo.toml
backtest/src/: error.rs  lib.rs  main.rs  parallel.rs  reconstruction.rs  stats.rs  traits.rs
backtest/src/parallel/: process_files.rs
backtest/src/reconstruction/: book_replay.rs  orderbook.rs
backtest/src/stats/: stats_accumulator.rs
examples/: watch_market.rs
src/: api.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  storage.rs
src/api/: data.rs  gamma.rs  websocket.rs
src/models/: activity.rs  events.rs  market.rs
src/storage/: manager.rs  parquet.rs  session.rs
