[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread","macros","net"] }
tokio-tungstenite = { version =" 0.28", features = ["native-tls"] }
