[workspace]
members = [".", "backtest"]
resolver = "2"

[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "57.2.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
futures-util = "0.3.31"
parquet = "57.2.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread","macros","net"] }
tokio-tungstenite = { version =" 0.28", features = ["native-tls"] }
uuid = { version = "1.20.0", features = ["v4","v7"] }
